Add picasso and weather icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,18 @@
         android:layout_height="wrap_content"
         android:text="weather"/>
 
-    <TextView
-        android:id="@+id/text"
+    <ImageView
+        android:id="@+id/weather_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:padding="@android:dimen/app_icon_size"/>
+
+    <TextView
+        android:id="@+id/weather_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/weather_img"
         android:layout_centerInParent="true"
         android:gravity="center"
         android:padding="@android:dimen/app_icon_size"/>
