--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,10 @@
             android:layout_height="wrap_content"
             android:text="@string/button_weather_fetch"/>
 
+        <kioli.myalgia.section.pain.MoodView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <include
             android:id="@+id/content_layout"
             layout="@layout/weather_content_layout"
