--- a/app/src/main/res/layout/weather_content_layout.xml
+++ b/app/src/main/res/layout/weather_content_layout.xml
@@ -13,16 +13,16 @@
         android:padding="@android:dimen/app_icon_size"/>
 
     <TextView
-        android:id="@+id/weather_time"
+        android:id="@+id/weather_location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/weather_img"/>
+        app:layout_constraintLeft_toRightOf="@+id/weather_img"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/weather_temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@+id/weather_img"
-        app:layout_constraintTop_toBottomOf="@+id/weather_time"/>
+        app:layout_constraintTop_toBottomOf="@+id/weather_location"/>
 </android.support.constraint.ConstraintLayout>
