--- a/app/src/main/res/layout/weather_content_layout.xml
+++ b/app/src/main/res/layout/weather_content_layout.xml
@@ -1,28 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/weather_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@android:dimen/app_icon_size"/>
-
-    <TextView
-        android:id="@+id/weather_location"
+    <include
+        layout="@layout/weather_widget"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/weather_img"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/weather_temp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/weather_img"
-        app:layout_constraintTop_toBottomOf="@+id/weather_location"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="wrap_content"/>
+</LinearLayout>
