--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="preference_padding">12dp</dimen>
+    <dimen name="weather_text">24sp</dimen>
 </resources>
