--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".section.weather.mvp.WeatherActivity">
+            tools:context=".section.weather.mvp.WeatherView">
 
     <LinearLayout
         android:id="@+id/preferencesContainer"
