--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="dim">#AA000000</color>
+    <color name="bg">#a9a9a9</color>
+    <color name="element_title">#a9a9a9</color>
+    <color name="dim">#55000000</color>
     <color name="mood1">#000000</color>
     <color name="mood2">#000000</color>
     <color name="mood3">#000000</color>
