--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="element_padding">12dp</dimen>
+    <dimen name="element_title_padding">8dp</dimen>
+    <dimen name="element_title_size">12sp</dimen>
     <dimen name="preference_padding">12dp</dimen>
     <dimen name="weather_text">24sp</dimen>
+    <dimen name="weather_icon_padding">8dp</dimen>
+    <dimen name="mood_icon_padding">8dp</dimen>
 </resources>
