--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="bg">#a9a9a9</color>
     <color name="element_title">#595959</color>
     <color name="dim">#55000000</color>
+    <color name="error_bg">#55FF0000</color>
     <color name="mood">#000000</color>
 </resources>
