--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#7885d7</color>
     <color name="bg">#a9a9a9</color>
+    <color name="bg_empty">#FFFFFF</color>
+    <color name="bg_error">#55FF0000</color>
     <color name="element_title">#595959</color>
     <color name="dim">#55000000</color>
-    <color name="error_bg">#55FF0000</color>
     <color name="delete">#DDFF0000</color>
     <color name="mood">#000000</color>
 </resources>
